creditsuggestion block ready desktop

--- a/src/template/debit.html
+++ b/src/template/debit.html
@@ -1,6 +1,6 @@
-<div class="card">
+<div class="debit">
     <div class="container">
-        <h2>Кредитные карты</h2>
+        <h2>Дебетовые карты</h2>
         <div class="border flex flex-j-s flex-n-w">
             <div class="card__item border_right hover">
                 <img src="img/russian-standart.png" alt="Russian Standart Card" class="card__image">
