--- a/src/blocks/_common/_common.scss
+++ b/src/blocks/_common/_common.scss
@@ -83,6 +83,7 @@ a{
   max-width: 1170px;
   margin-left: auto;
   margin-right: auto;
+  position: relative;
 }
 .border{
   border-radius: 10px;
@@ -102,6 +103,7 @@ a{
   font-size: 14px;
   padding-bottom: 1px;
   border-bottom: 1px solid #93a6d0;
+  display: table;
 }
 .button{
   margin-top: 22px;
@@ -115,7 +117,7 @@ a{
   border: none;
   text-transform: uppercase;
   font-weight: bold;
-  font-size: 12px;
+  font-size: 13px;
   letter-spacing: 1px;
   background-color: #f6d166;
   outline:none;
@@ -139,5 +141,71 @@ h2{
   transition: 500ms;
   &:hover{
     box-shadow: 0 0 30px -7px #9d9d9d;
+  }
+}
+.bestcard{
+  &::before{
+    content: 'Самая лучшая карта';
+    background-color: #f6d166;
+    width: 70px;
+    height: 70px;
+    text-align: center;
+    border-radius: 60px;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+    font-size: 11px;
+    margin-left: 161px;
+    margin-top: -47px;
+    padding: 4px;
+  }
+}
+.arrow-prev, .arrow-next{
+  width: 34px;
+  height: 34px;
+  border: 1px solid #dddddd;
+  border-radius: 24px;
+  font-size: 25px;
+  text-align: center;
+  margin-top: 0px;
+  display: block;
+  background-color: white;
+  cursor: pointer;
+  outline: none;
+  position: absolute;
+  top: 51%;
+}
+.arrow-prev{
+  margin-left: -17px;
+}
+.arrow-next{
+  right: 0;
+  margin-right: -17px;
+}
+.star{
+  &:before{
+    position: absolute;
+    background-color: #efefef;
+    width: 120px;
+    margin-left: -70px;
+    margin-top: -66px;
+    height: 31px;
+    border-radius: 13px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #ff5839;
+    font-size: 23px;
+    letter-spacing: 1px;
+    padding-left: 2px;
+  }
+}
+.star-5{
+  @extend .star;
+  &::before{
+    content: '★★★★★';
+
   }
 }
