--- a/src/template/debit.html
+++ b/src/template/debit.html
@@ -9,15 +9,15 @@
                 <div class="card__location-1 flex flex-j-s">
                     <img src="img/proc.png" alt="Процентая ставка">
                     <div class="card__location-2">
-                        <div class="card__text-1">Процентная ставка</div>
-                        <div class="strong">от 12%</div>
+                        <div class="card__text-1">Процент на остаток</div>
+                        <div class="strong">до 6%</div>
                     </div>
                 </div>
                 <div class="card__location-1 flex flex-j-s">
                     <img src="img/lgotniy-pereiod.png" alt="Льготный период">
                     <div class="card__location-2">
-                        <div class="card__text-1">Льготный период</div>
-                        <div class="strong">55 дней</div>
+                        <div class="card__text-1">Кэшбэк</div>
+                        <div class="strong">1-30%</div>
                     </div>
                 </div>
                 <button class="button">Оформить карту</button>
@@ -29,15 +29,15 @@
                 <div class="card__location-1 flex flex-j-s">
                     <img src="img/proc.png" alt="Процентая ставка">
                     <div class="card__location-2">
-                        <div class="card__text-1">Процентная ставка</div>
-                        <div class="strong">от 21%</div>
+                        <div class="card__text-1">Процент на остаток</div>
+                        <div class="strong">до 6%</div>
                     </div>
                 </div>
                 <div class="card__location-1 flex flex-j-s">
                     <img src="img/lgotniy-pereiod.png" alt="Льготный период">
                     <div class="card__location-2">
-                        <div class="card__text-1">Льготный период</div>
-                        <div class="strong">90 дней</div>
+                        <div class="card__text-1">Кэшбэк</div>
+                        <div class="strong">1-30%</div>
                     </div>
                 </div>
                 <button class="button">Оформить карту</button>
@@ -49,15 +49,15 @@
                 <div class="card__location-1 flex flex-j-s">
                     <img src="img/proc.png" alt="Процентая ставка">
                     <div class="card__location-2">
-                        <div class="card__text-1">Процентная ставка</div>
-                        <div class="strong">от 12%</div>
+                        <div class="card__text-1">Процент на остаток</div>
+                        <div class="strong">до 6%</div>
                     </div>
                 </div>
                 <div class="card__location-1 flex flex-j-s">
                     <img src="img/lgotniy-pereiod.png" alt="Льготный период">
                     <div class="card__location-2">
-                        <div class="card__text-1">Льготный период</div>
-                        <div class="strong">55 дней</div>
+                        <div class="card__text-1">Кэшбэк</div>
+                        <div class="strong">1-30%</div>
                     </div>
                 </div>
                 <button class="button">Оформить карту</button>
@@ -69,15 +69,15 @@
                 <div class="card__location-1 flex flex-j-s">
                     <img src="img/proc.png" alt="Процентая ставка">
                     <div class="card__location-2">
-                        <div class="card__text-1">Процентная ставка</div>
-                        <div class="strong">от 12%</div>
+                        <div class="card__text-1">Процент на остаток</div>
+                        <div class="strong">до 6%</div>
                     </div>
                 </div>
                 <div class="card__location-1 flex flex-j-s">
                     <img src="img/lgotniy-pereiod.png" alt="Льготный период">
                     <div class="card__location-2">
-                        <div class="card__text-1">Льготный период</div>
-                        <div class="strong">55 дней</div>
+                        <div class="card__text-1">Кэшбэк</div>
+                        <div class="strong">1-30%</div>
                     </div>
                 </div>
                 <button class="button">Оформить карту</button>
