--- a/src/template/rassrochki.html
+++ b/src/template/rassrochki.html
@@ -3,18 +3,18 @@
         <h2>Карты  рассрочки</h2>
         <div class="border flex flex-j-s flex-n-w">
             <div class="card__item border_right hover">
-                <img src="img/russian-standart.png" alt="Russian Standart Card" class="card__image">
+                <img src="img/halva.png" alt="Халва Совкомбанк" class="card__image">
                 <div class="text__underline card__text-2">Халва</div>
                 <div class="card__text-1">Совкомбанк</div>
                 <div class="card__location-1 flex flex-j-s">
                     <img src="img/proc.png" alt="Процентая ставка">
                     <div class="card__location-2">
-                        <div class="card__text-1">Процентная ставка</div>
-                        <div class="strong">от 0%</div>
+                        <div class="card__text-1">Процент на остаток</div>
+                        <div class="strong">до 6%</div>
                     </div>
                 </div>
                 <div class="card__location-1 flex flex-j-s">
-                    <img src="img/lgotniy-pereiod.png" alt="Льготный период">
+                    <img src="img/cashback.png" alt="Кэшбэк">
                     <div class="card__location-2">
                         <div class="card__text-1">Кредитный лимит</div>
                         <div class="strong">300 000 руб</div>
@@ -22,8 +22,8 @@
                 </div>
                 <button class="button">Оформить карту</button>
             </div>
-            <div class="card__item border_right hover bestcard">
-                <img src="img/tinkof.png" alt="Tinkoff Card" class="card__image">
+            <div class="card__item border_right hover">
+                <img src="img/sovest.png" alt="Совесть" class="card__image">
                 <div class="text__underline card__text-2">Совесть</div>
                 <div class="card__text-1">КИВИ Банк</div>
                 <div class="card__location-1 flex flex-j-s">
@@ -34,7 +34,7 @@
                     </div>
                 </div>
                 <div class="card__location-1 flex flex-j-s">
-                    <img src="img/lgotniy-pereiod.png" alt="Льготный период">
+                    <img src="img/cashback.png" alt="Кэшбэк">
                     <div class="card__location-2">
                         <div class="card__text-1">Кэшбек</div>
                         <div class="strong">1-30%</div>
@@ -43,41 +43,41 @@
                 <button class="button">Оформить карту</button>
             </div>
             <div class="card__item border_right hover">
-                <img src="img/alfa.png" alt="alfa bank card" class="card__image">
-                <div class="text__underline card__text-2">Classic</div>
-                <div class="card__text-1">Альфа-банк</div>
+                <img src="img/europa.png" alt="Европа банк" class="card__image">
+                <div class="text__underline card__text-2">Карта рассрочки</div>
+                <div class="card__text-1">Кредит Европа Банк</div>
                 <div class="card__location-1 flex flex-j-s">
                     <img src="img/proc.png" alt="Процентая ставка">
                     <div class="card__location-2">
-                        <div class="card__text-1">Процентная ставка</div>
-                        <div class="strong">от 12%</div>
+                        <div class="card__text-1">Процент на остаток</div>
+                        <div class="strong">до 6%</div>
                     </div>
                 </div>
                 <div class="card__location-1 flex flex-j-s">
-                    <img src="img/lgotniy-pereiod.png" alt="Льготный период">
+                    <img src="img/cashback.png" alt="Кэшбэк">
                     <div class="card__location-2">
-                        <div class="card__text-1">Льготный период</div>
-                        <div class="strong">55 дней</div>
+                        <div class="card__text-1">Кэшбек</div>
+                        <div class="strong">1-30%</div>
                     </div>
                 </div>
                 <button class="button">Оформить карту</button>
             </div>
             <div class="card__item hover">
-                <img src="img/uralskiy.png" alt="Uralskiy bank Card" class="card__image">
-                <div class="text__underline card__text-2">Быстрокарта (Быстроденьги) </div>
-                <div class="card__text-1">Уральский банк</div>
+                <img src="img/alfa-vmestodeneg.png" alt="Альфа вместо денег" class="card__image">
+                <div class="text__underline card__text-2">#вместоденег</div>
+                <div class="card__text-1">Альфа-банк</div>
                 <div class="card__location-1 flex flex-j-s">
                     <img src="img/proc.png" alt="Процентая ставка">
                     <div class="card__location-2">
-                        <div class="card__text-1">Процентная ставка</div>
-                        <div class="strong">от 12%</div>
+                        <div class="card__text-1">Процент на остаток</div>
+                        <div class="strong">до 6%</div>
                     </div>
                 </div>
                 <div class="card__location-1 flex flex-j-s">
-                    <img src="img/lgotniy-pereiod.png" alt="Льготный период">
+                    <img src="img/cashback.png" alt="Кэшбэк">
                     <div class="card__location-2">
-                        <div class="card__text-1">Льготный период</div>
-                        <div class="strong">55 дней</div>
+                        <div class="card__text-1">Кэшбек</div>
+                        <div class="strong">1-30%</div>
                     </div>
                 </div>
                 <button class="button">Оформить карту</button>
