--- a/src/blocks/header/header.scss
+++ b/src/blocks/header/header.scss
@@ -10,18 +10,30 @@
     color: black;
     font-weight: 700;
     font-size: 14.5px;
-    margin-left: 38px;
+    margin-left: 28px;
     height: 100%;
     align-items: center;
     display: flex;
     border-bottom: 3px solid transparent;
     transition: 500ms;
-
+    img{
+      margin-right: 6px;
+    }
     &:first-child{
       margin-left: 0;
     }
     &:hover{
      border-color:#93a5cf;
+    }
+  }
+  &__link_nested{
+    &:after{
+      content: '›';
+      margin-left: 15px;
+      font-size: 25px;
+      transform: rotate(90deg);
+      display: block;
+      color: #9095bb;
     }
   }
   &__search{
