--- a/src/template/header.html
+++ b/src/template/header.html
@@ -3,12 +3,22 @@
         <div class="header__height flex">
             <img class="header__logo" src="img/logo.png" alt="logo"/>
             <div class="header__location flex">
-                <a class="header__link" href="#">Кредитные карты</a>
-                <a class="header__link" href="#">Займы</a>
-                <a class="header__link" href="#">Дебетовые карты</a>
-                <a class="header__link" href="#">Карты рассрочки</a>
-                <a class="header__link" href="#">Кредиты</a>
-                <img class="header__search"src="img/search.png" alt="search"/>
+                <a class="header__link header__link_nested" href="#"><img src="img/creditCard-small.png" alt="Кредитные карты"> Кредитные карты</a>
+                <div class="header__link_open">
+                    <ul>
+                        <li>Без процентов</li>
+                        <li>Без отказа</li>
+                        <li>С бесплатной доставкой</li>
+                        <li>С бесплатным обслуживанием</li>
+                        <li>С кэшбеком</li>
+                        <li>От Олега Тинькова</li>
+                    </ul>
+                </div>
+                <a class="header__link" href="#"><img src="img/zaimi-small.png" alt="Займы"> Займы</a>
+                <a class="header__link" href="#"><img src="img/debetovie-small.png" alt="Дебетовые карты"> Дебетовые карты</a>
+                <a class="header__link" href="#"><img src="img/rassrochki-small.png" alt="Карты рассрочки"> Карты рассрочки</a>
+                <a class="header__link" href="#"><img src="img/credit-small.png" alt="Кредиты"> Кредиты</a>
+                <img class="header__search" src="img/search.png" alt="search"/>
             </div>
         </div>
     </div>
