--- a/src/template/about.html
+++ b/src/template/about.html
@@ -1,11 +1,11 @@
-<div class="about">
-    <div class="about__container container flex flex-j-c">
-        <div class="about__breadcrumbs flex flex-j-s">
+<div class="preview">
+    <div class="preview__container container flex flex-j-c">
+        <div class="preview__breadcrumbs flex flex-j-s">
             <a href="/" class="breadcrumbs__item">ВсеКредиты.ру</a>
             <div class="breadcrumbs__item">О нашем проекте</div>
         </div>
         <div class="flex flex-j-c flex-a-fs">
-            <div class="about__intro half flex flex-j-s flex-a-fs">
+            <div class="preview__intro half flex flex-j-s flex-a-fs">
                 <img class="intro__logo" src="img/logo-mini.png" alt="logo">
                 <div class="intro__content">
                     <div class="intro__title strong">
@@ -20,7 +20,7 @@
                     </div>
                 </div>
             </div>
-            <div class="grid half about-chunk_side_left about__advantages">
+            <div class="grid half preview-chunk_side_left preview__advantages">
                 <div class="advantage">
                     <img class="advantage__img" src="img/advantage-1.png" alt="Достоинство">
                     <div class="advantage__text strong">
