--- a/src/blocks/_common/_common.scss
+++ b/src/blocks/_common/_common.scss
@@ -60,6 +60,12 @@ a{
 .grid-r-2{
   grid-row-start: 2 span;
 }
+.grid-g-46{
+  grid-gap: 46px;
+}
+.grid-t-c-4{
+  grid-template-columns: repeat(4, 1fr);
+}
 .smart-break{
   display: block;
 }
@@ -203,6 +209,25 @@ h2{
     letter-spacing: 1px;
     padding-left: 2px;
   }
+}
+.bullet{
+  margin-bottom: 20px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  background-image: radial-gradient(circle at right top, #c1e59b 10%, #8fa4d5 80%);
+
+  border-radius: 100%;
+
+  width: 50px;
+  height: 50px;
+
+  color: #ffffff;
+
+  font-weight: bolder;
+  font-size: 20px;
 }
 .star-5{
   @extend .star;
