--- a/src/blocks/about/about.scss
+++ b/src/blocks/about/about.scss
@@ -6,7 +6,7 @@ $color-lightGray: #efefef;
     background-color: $color-lightGray;
     background-image: url(../img/about-intro-bg.png);
     background-repeat: repeat;
-    padding: 57px 0;
+    padding: 57px 0 71px;
 }
 
 .preview__breadcrumbs{
@@ -42,6 +42,7 @@ $color-lightGray: #efefef;
 
 .intro__text{
     padding: 5px;
+    padding-top: 2px;
     width: 85%;
     line-height: 1.6;
     color: $color-darkGray;
@@ -54,8 +55,8 @@ $color-lightGray: #efefef;
     padding: 5px;
     grid-template-columns: 50% 50%;
     grid-template-rows: 50% 50%;
-    grid-row-gap: 40px;
-    grid-column-gap: 16px;
+    grid-row-gap: 30px;
+    grid-column-gap: 15px;
 }
 
 .advantage{
@@ -70,7 +71,8 @@ $color-lightGray: #efefef;
 .advantage__text{
     text-align: center;
     font-size: 18px;
-    width: 80%;
+    font-weight: 700;
+    width: 78%;
 }
 
 .advantage__img{
@@ -78,4 +80,26 @@ $color-lightGray: #efefef;
     height: 80px;
     object-fit: contain;
     object-position: center bottom;
+}
+
+.question{
+    width: 73.333333%;
+    display: grid;
+    grid-gap: 46px;
+    grid-template-columns: repeat(3, 1fr);
+    margin: 40px 0;
+}
+
+.question__text{
+    font-weight: bold;
+    line-height: 1.5;
+    grid-area: 1 span;
+}
+
+.question__text_type_half{
+    grid-column: 2 span;
+}
+
+.question__text_type_full{
+    grid-column: 3 span;
 }
