--- a/src/template/about.html
+++ b/src/template/about.html
@@ -1,54 +1,93 @@
 <div class="about">
-    <div class="preview">
-        <div class="preview__container container flex flex-j-c">
-            <div class="preview__breadcrumbs flex flex-j-s">
-                <a href="/" class="breadcrumbs__item">ВсеКредиты.ру</a>
-                <div class="breadcrumbs__item">О нашем проекте</div>
+    //= about-preview.html
+    <div class="container questions">
+        <div class="question flex flex-j-s flex-a-b">
+            <div class="question__text question__text_type_third">
+                <div class="bullet">1</div>
+                Но почему нужно оформить именно ее? Ну, она бесплатная.
+                И приносит доход. Причем неважно сколько у вас денег
+                на балансе, 100 или 5 000 000 рублей.
             </div>
-            <div class="flex flex-j-c flex-a-fs">
-                <div class="preview__intro half flex flex-j-s flex-a-fs">
-                    <img class="intro__logo" src="img/logo-mini.png" alt="logo">
-                    <div class="intro__content">
-                        <div class="intro__title strong">
-                            Все кредиты
-                        </div>
-                        <div class="intro__text">
-                            Портал «ВсеКредиты.com» – финансовый супермаркет, который создает удобные сервисы
-                            и рекомендации для того чтобы помочь людям принимать правильные решения в жизни
-                            <br /><br /><br />
-                            Историю о нашем портале мы расскажем ниже,
-                            а пока ознакомтесь с ключевыми показателями.
-                        </div>
+            <div class="question__text question__text_type_third">
+                <div class="bullet">2</div>
+                Это такой повышенный кешбэк
+                для геймеров. Если вы пользуетесь PlayStation Store, Steam,
+                Fortnite, Xbox, GOG.com, War Thunder, League Of Legends,
+                Battle.net, Wargaming.net, EVE Online и Origin,
+                то будете получать от 7 до 10% cashback во время распродаж
+                в данных играх/сервисах.
+            </div>
+            <div class="question__text question__text_type_third">
+                <div class="bullet">3</div>
+                Здесь он начисляется в виде рокетрублей (по сути обычные рубли).
+                Ежемесячно банк показывает 5 категорий, из которых вы можете
+                выбрать 3, по которым у вас будет cashback 10%.
+            </div>
+            <div class="question__text question__text_type_third">
+                Но почему нужно оформить именно ее? Ну, она бесплатная.
+                И приносит доход. Причем неважно сколько у вас денег
+                на балансе, 100 или 5 000 000 рублей.
+            </div>
+            <div class="question__text question__text_type_half">
+                Это такой повышенный кешбэк для геймеров. Если вы пользуетесь PlayStation Store, Steam, Fortnite, Xbox, GOG.com, War
+                Thunder, League Of Legends, Battle.net, Wargaming.net, EVE Online и Origin, то будете получать
+                от 7 до 10% cashback во время распродаж в данных играх/сервисах.
+            </div>
+            <div class="question__text question__text_type_full">
+                <div class="grid grid-g-46 grid-t-c-4">
+                    <div class="grid-c-1">
+                        Но почему нужно оформить именно ее?
+                        Ну, она бесплатная.
+                        И приносит доход. Причем неважно сколько у вас денег на балансе,
+                        100 или 5 000 000 рублей.
+                    </div>
+                    <div class="grid-c-1">
+                        Это такой повышенный кешбэк для геймеров. Если вы пользуетесь
+                        PlayStation Store, Steam, Fortnite, Xbox, GOG.com, War
+                        Thunder, EVE Online
+                        и Origin, то будете получать от 7 до 10% cashback во время
+                        распродаж в данных играх/сервисах.
+                    </div>
+                    <div class="grid-c-1">
+                        Здесь он начисляется
+                        в виде рокетрублей
+                        (по сути обычные рубли). Ежемесячно банк показывает 5 категорий,
+                        из которых вы можете выбрать 3, по которым
+                        у вас будет cashback 10%.
+                    </div>
+                    <div class="grid-c-1">
+                        Вы можете снимать наличку в любых банкоматах (все равно какой банк).
+                        По всему миру. Бесплатно.
                     </div>
                 </div>
-                <div class="grid half preview-chunk_side_left preview__advantages">
-                    <div class="advantage">
-                        <img class="advantage__img" src="img/advantage-1.png" alt="Достоинство">
-                        <div class="advantage__text strong">
-                            1 000 000 уникальных посетителей в месяц
-                        </div>
+            </div>
+            <div class="question__text question__text_type_full">
+                <div class="grid grid-g-46 grid-t-c-4">
+                    <div class="grid-c-1">
+                        <div class="bullet">1</div>
+                        Но почему нужно оформить именно ее?
+                        Ну, она бесплатная.
+                        И приносит доход. Причем неважно сколько у вас денег на балансе,
+                        100 или 5 000 000 рублей.
                     </div>
-                    <div class="advantage">
-                        <img class="advantage__img" src="img/advantage-2.png" alt="Достоинство">
-                        <div class="advantage__text strong">
-                            3 098 финансовых организаций в базе
-                        </div>
+                    <div class="grid-c-1">
+                        <div class="bullet">2</div>
+                        Это такой повышенный кешбэк для геймеров. Если вы пользуетесь
+                        PlayStation Store, Steam, Fortnite, Xbox, GOG.com, War
+                        Thunder, EVE Online
+                        и Origin, то будете получать от 7 до 10% cashback во время
+                        распродаж в данных играх/сервисах.
                     </div>
-                    <div class="advantage">
-                        <img class="advantage__img" src="img/advantage-3.png" alt="Достоинство">
-                        <div class="advantage__text strong">
-                            23 980 предложений от банков и МФО
-                        </div>
-                    </div>
-                    <div class="advantage">
-                        <img class="advantage__img" src="img/advantage-4.png" alt="Достоинство">
-                        <div class="advantage__text strong">
-                            90 000 отзывов о банках и МФО
-                        </div>
+                    <div class="grid-c-2">
+                        <div class="bullet">3</div>
+                        Это такой повышенный кешбэк для геймеров. Если
+                        вы пользуетесь PlayStation Store, Steam, Fortnite, Xbox,
+                        GOG.com, War Thunder, League Of Legends, Battle.net,
+                        Wargaming.net, EVE Online и Origin, то будете получать
+                        от 7 до 10% cashback во время распродаж в данных играх/сервисах.
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
 </div>
