--- a/src/template/comments-preview.html
+++ b/src/template/comments-preview.html
@@ -23,7 +23,7 @@
                     <div class="star-mini-3"></div>
                 </div>
             </div>
-            <div class="grid third preview-chunk_side_left preview__advantages">
+            <div class="grid third preview__advantages">
                 <div class="advantage">
                     <img class="advantage__img" src="img/advantage-1.png" alt="Достоинство">
                     <div class="advantage__text strong">
