--- a/src/template/about-preview.html
+++ b/src/template/about-preview.html
@@ -7,7 +7,7 @@
         <div class="flex flex-j-c flex-a-fs">
             <div class="preview__intro about-preview__intro half flex flex-j-s flex-a-fs">
                 <img class="about-intro__logo intro__logo" src="img/logo-mini.png" alt="logo">
-                <div class="about-intro__content intro__content">
+                <div class="about-intro__content seven-and-tenth intro__content">
                     <div class="about-intro__title intro__title strong">
                         Все кредиты
                     </div>
@@ -20,7 +20,7 @@
                     </div>
                 </div>
             </div>
-            <div class="grid half preview-chunk_side_left preview__advantages">
+            <div class="grid half preview__advantages">
                 <div class="advantage">
                     <img class="advantage__img" src="img/advantage-1.png" alt="Достоинство">
                     <div class="advantage__text strong">
