--- a/src/blocks/header/header.scss
+++ b/src/blocks/header/header.scss
@@ -36,7 +36,29 @@
       color: #9095bb;
     }
   }
+  &__link_nested:hover &__nestedlink{
+    opacity: 1;
+  }
   &__search{
     margin-left: 57px;
+  }
+  &__nestedlink{
+    transition: 500ms;
+    opacity: 0;
+    position: absolute;
+    top: 102px;
+    z-index: 2;
+    margin-left: -2px;
+    background-color: #97a6cf;
+    li{
+      transition: 500ms;
+      color: white;
+      border-bottom: 1px solid #b1bee0;
+      display: block;
+      padding: 17px 28px;
+      &:hover{
+        background-color: #7f91bf;
+      }
+    }
   }
 }
