--- a/src/template/header.html
+++ b/src/template/header.html
@@ -3,16 +3,17 @@
         <div class="header__height flex">
             <img class="header__logo" src="img/logo.png" alt="logo"/>
             <div class="header__location flex">
-                <a class="header__link header__link_nested" href="#"><img src="img/creditCard-small.png" alt="Кредитные карты"> Кредитные карты</a>
-                <div class="header__link_open">
-                    <ul>
-                        <li>Без процентов</li>
-                        <li>Без отказа</li>
-                        <li>С бесплатной доставкой</li>
-                        <li>С бесплатным обслуживанием</li>
-                        <li>С кэшбеком</li>
-                        <li>От Олега Тинькова</li>
+                <div class="header__link header__link_open header__link_nested">
+                    <ul class="header__nestedlink">
+                        <a href="#"><li>Без процентов</li></a>
+                        <a href="#"><li>Без отказа</li></a>
+                        <a href="#"><li>С бесплатной доставкой</li></a>
+                        <a href="#"><li>С бесплатным обслуживанием</li></a>
+                        <a href="#"><li>С кэшбеком</li></a>
+                        <a href="#"><li>От Олега Тинькова</li></a>
                     </ul>
+                    <img src="img/creditCard-small.png" alt="Кредитные карты">
+                    Кредитные карты
                 </div>
                 <a class="header__link" href="#"><img src="img/zaimi-small.png" alt="Займы"> Займы</a>
                 <a class="header__link" href="#"><img src="img/debetovie-small.png" alt="Дебетовые карты"> Дебетовые карты</a>
