--- a/src/blocks/about/about.scss
+++ b/src/blocks/about/about.scss
@@ -18,10 +18,12 @@ $color-lightGray: #efefef;
 
 .about-intro__title{
   color: $color-blue;
+  text-transform: uppercase;
   font-size: 55px;
 }
 
 .about-intro__text{
+  width: 85%;
   color: $color-darkGray;
 }
 
