--- a/src/template/comments-preview.html
+++ b/src/template/comments-preview.html
@@ -1,51 +1,64 @@
-<div class="preview">
+<div class="preview comments-preview">
     <div class="preview__container container flex flex-j-c">
         <div class="preview__breadcrumbs flex flex-j-s">
             <a href="/" class="breadcrumbs__item">ВсеКредиты.ру</a>
             <a href="/zaimi" class="breadcrumbs__item">Займы</a>
             <a href="https://greenmoney.ru" class="breadcrumbs__item">Greenmoney</a>
-            <div class="breadcrumbs__item">О нашем проекте</div>
+            <div class="breadcrumbs__item">Отзывы</div>
         </div>
-        <div class="flex flex-j-c flex-a-fs">
-            <div class="intro__title strong">
-                Все кредиты
+        <div class="flex flex-j-s flex-a-fs">
+            <div class="intro__title comments-intro__title strong">
+                Отзывы о Турбозайм (Turbozaim)
             </div>
-            <div class="preview__intro half-and-third flex flex-j-s flex-a-fs">
-                <img class="preview__intro" src="img/turbozaim.png" alt="tubozaim">
-                <div class="intro__content">
-                    <div class="intro__text">
-                        Портал «ВсеКредиты.com» – финансовый супермаркет, который создает удобные сервисы
-                        и рекомендации для того чтобы помочь людям принимать правильные решения в жизни
-                        <br /><br /><br />
-                        Историю о нашем портале мы расскажем ниже,
-                        а пока ознакомтесь с ключевыми показателями.
-                    </div>
-                    <div class="star-mini-3"></div>
-                </div>
-            </div>
-            <div class="grid third preview__advantages">
-                <div class="advantage">
-                    <img class="advantage__img" src="img/advantage-1.png" alt="Достоинство">
-                    <div class="advantage__text strong">
-                        1 000 000 уникальных посетителей в месяц
-                    </div>
-                </div>
-                <div class="advantage">
-                    <img class="advantage__img" src="img/advantage-2.png" alt="Достоинство">
-                    <div class="advantage__text strong">
-                        3 098 финансовых организаций в базе
+            <div class="preview__intro flex flex-j-s flex-a-fs">
+                <div class="flex half-and-quarter flex-n-w comments-intro">
+                    <img class="comments-intro__logo intro__logo" src="img/turbozaim.png" alt="tubozaim">
+                    <div class="intro__content comments-intro__content">
+                        <div class="intro__text comments-intro__text">
+                            Мы размещаем только настоящие отзывы об организации «Турбозайм».
+                            Но мы не можем гарантировать 100% подлинность
+                            информации от наших пользователей. Будьте внимательны
+                            при выборе той или иной микрофинансовой организации.
+                        </div>
+                        <div class="flex flex-j-sb">
+                            <button class="button button_size_medium button_offset_zero">Отсавьте свой отзыв</button>
+                            <div class="flex flex-d-c flex-j-c flex-a-fs">
+                                <div class="text-base-padding text-gray text-small">
+                                    Рейтинг <span class="strong">3</span>
+                                    на основе <span class="strong">45 отзывов</span>
+                                </div>
+                                <div class="star-mini-3"></div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="advantage">
-                    <img class="advantage__img" src="img/advantage-3.png" alt="Достоинство">
-                    <div class="advantage__text strong">
-                        23 980 предложений предложений от банков и МФО
-                    </div>
-                </div>
-                <div class="advantage">
-                    <img class="advantage__img" src="img/advantage-4.png" alt="Достоинство">
-                    <div class="advantage__text strong">
-                        90 000 отзывов о банках и МФО
+                <div class="third one-and-sixth flex-g-1 preview__advantages">
+                    <div class="contacts">
+                        <div class="contact contact_size_s">
+                            <div class="contact__label contact__label_size_s">
+                                Телефон
+                            </div>
+                            <div class="contact__content contact__content_size_s">
+                                8 800 221-99-88
+                            </div>
+                        </div>
+                        <div class="contact">
+                            <div class="contact__label contact__label_size_s">
+                                Электронная почта
+                            </div>
+                            <div class="contact__content contact__content_size_s">
+                                info@creditplus.ru
+                            </div>
+                        </div>
+                        <div class="contact">
+                            <div class="contact__label contact__label_size_s">
+                                Официальный сайт
+                            </div>
+                            <a href="creditplus.ru" class="contact__content_type_link link contact__content contact__content_size_s">
+                                creditplus.ru
+                            </a>
+                        </div>
+                        <button class="button button_offset_zero button_size_full">Оформить займ</button>
                     </div>
                 </div>
             </div>
