--- a/src/blocks/about/about.scss
+++ b/src/blocks/about/about.scss
@@ -20,6 +20,7 @@ $color-lightGray: #efefef;
   color: $color-blue;
   text-transform: uppercase;
   font-size: 55px;
+  font-weight: bold;
 }
 
 .about-intro__text{
@@ -51,7 +52,7 @@ $color-lightGray: #efefef;
 }
 
 .question{
-  display: grid;
+  display: grid!important;
   grid-gap: 46px;
   grid-template-columns: repeat(3, 1fr);
   margin: 40px 0;
