--- a/src/blocks/header/header.scss
+++ b/src/blocks/header/header.scss
@@ -7,6 +7,7 @@
     height: 100%;
   }
   &__link{
+    cursor: pointer;
     color: black;
     font-weight: 700;
     font-size: 14.5px;
@@ -38,11 +39,13 @@
   }
   &__link_nested:hover &__nestedlink{
     opacity: 1;
+    visibility: visible;
   }
   &__search{
     margin-left: 57px;
   }
   &__nestedlink{
+    visibility: hidden;
     transition: 500ms;
     opacity: 0;
     position: absolute;
