--- a/src/template/about-preview.html
+++ b/src/template/about-preview.html
@@ -8,7 +8,7 @@
             <div class="preview__intro about-preview__intro half flex flex-j-s flex-a-fs">
                 <img class="about-intro__logo intro__logo" src="img/logo-mini.png" alt="logo">
                 <div class="about-intro__content seven-and-tenth intro__content">
-                    <div class="about-intro__title intro__title strong">
+                    <div class="about-intro__title intro__title">
                         Все кредиты
                     </div>
                     <div class="about-intro__text intro__text">
@@ -23,25 +23,25 @@
             <div class="grid half preview__advantages">
                 <div class="advantage">
                     <img class="advantage__img" src="img/advantage-1.png" alt="Достоинство">
-                    <div class="advantage__text strong">
+                    <div class="advantage__text ">
                         1 000 000 уникальных посетителей в месяц
                     </div>
                 </div>
                 <div class="advantage">
                     <img class="advantage__img" src="img/advantage-2.png" alt="Достоинство">
-                    <div class="advantage__text strong">
+                    <div class="advantage__text ">
                         3 098 финансовых организаций в базе
                     </div>
                 </div>
                 <div class="advantage">
                     <img class="advantage__img" src="img/advantage-3.png" alt="Достоинство">
-                    <div class="advantage__text strong">
+                    <div class="advantage__text ">
                         23 980 предложений предложений от банков и МФО
                     </div>
                 </div>
                 <div class="advantage">
                     <img class="advantage__img" src="img/advantage-4.png" alt="Достоинство">
-                    <div class="advantage__text strong">
+                    <div class="advantage__text ">
                         90 000 отзывов о банках и МФО
                     </div>
                 </div>
