--- a/src/blocks/calculator/calculator.scss
+++ b/src/blocks/calculator/calculator.scss
@@ -7,6 +7,21 @@
   }
   &__number{
     display: block;
+    height: 53px;
+    border-radius: 10px;
+    background-color: white;
+    width: 500px;
+    border: 0;
+    outline: none;
+    font-size: 25px;
+    padding: 10px 35px;
+    color: #93a5cd;
+  }
+  &__rub{
+    &:after{
+      content: '₽';
+      font-weight: bold;
+    }
   }
   &__range{
     display: block;
