--- a/src/template/calculator.html
+++ b/src/template/calculator.html
@@ -4,7 +4,7 @@
         <form class="calculator__form">
             <div class="calculator__money half">
                 <div class="calculator__text-1">Сколько нужно денег?</div>
-                <input type="number" name="rangeInput" class="calculator__number" min="0" max="100000" value="0" readonly>
+                <input type="number" name="rangeInput" class="calculator__number calculator__rub" min="0" max="100000" value="0" readonly>
                 <input type="range"  name="rangeInput" class="calculator__range" min="0" max="100000" value="0" oninput="updateValByName(this.value,this.name);">
             </div>
         </form>
