--- a/src/blocks/_common/_common.scss
+++ b/src/blocks/_common/_common.scss
@@ -248,7 +248,7 @@ a{
   flex-wrap: nowrap;
   justify-content: space-between;
   align-items: center;
-  margin-top: 30px;
+  margin-top: 0;
   &__form{
     display: flex;
     padding: 0 20px;
@@ -283,13 +283,43 @@ a{
   @extend .animated;
   outline: none;
   &_type_text{
-    padding: 26px 20px 24px 54px;
+    padding: 20px 0 27px 54px;
     width: 100%;
+    font-size: 14px;
     margin-bottom: 10px;
-    background-image: url(../img/avatar.png);
     background-repeat: no-repeat;
-    background-position: 20px 24px;
-    background-size: 24px 24px;
+    background-position: 26px 20px;
+    $size: 14px;
+    background-size: $size $size;
+  }
+  &_type_email{
+    background-image: url(../img/email-icon.png);
+  }
+  &_type_login{
+    background-image: url(../img/user-icon.png);
+  }
+  &_type_advantages{
+    background-image: url(../img/like-icon.png);
+  }
+  &_type_problems{
+    background-image: url(../img/dislike-icon.png);
+  }
+  &_type_textarea{
+    margin-top: 10px;
+    margin-bottom: 20px;
+  }
+  &_type_comment{
+    background-image: url(../img/comment-icon.png);
+  }
+  &_offset_big{
+    margin-bottom: 30px;
+    &:first-child{
+      margin-bottom: 20px;
+      margin-top: 10px;
+    }
+    &:last-child{
+      margin-bottom: 0;
+    }
   }
   &:focus{
     box-shadow: 0px 3px 7px rgba(0,0,0, 0.03);
@@ -301,7 +331,7 @@ a{
     position: relative;
   }
   &_type_file{
-    margin-top: 5px;
+    margin-top: -7px;
     border: 2px dashed $color-darkGray;
     background: transparent;
     width: 100%;
@@ -368,7 +398,7 @@ a{
       margin-top: 10px;
       display: block;
       content: '';
-      background: url(../img/avatar.png);
+      background: url(../img/file-icon.png);
       $size: 50px;
       background-size: $size $size;
       width: $size;
@@ -499,53 +529,52 @@ h2{
 
   }
 }
-
-//.star{
-//  display: flex;
-//  justify-content: center;
-//  align-items: center;
-//  background: $color-lightGray;
-//  width: 126px;
-//  height: 30px;
-//  border-radius: 15px;
-//  font-size: 16px;
-//  &:before, &:after{
-//    display: flex;
-//    justify-content: space-around;
-//    align-items: center;
-//    letter-spacing: 4px;
-//    padding-left: 2px;
-//  }
-//  &:before{
-//    color: $color-orange;
-//  }
-//  &:after{
-//    color: $color-darkGray;
-//  }
-//}
-//.star-big{
-//  display: flex;
-//  justify-content: center;
-//  align-items: center;
-//  background: $color-lightGray;
-//  width: 182px;
-//  height: 46px;
-//  border-radius: 25px;
-//  font-size: 24px;
-//  &:before, &:after{
-//    display: flex;
-//    justify-content: space-around;
-//    align-items: center;
-//    letter-spacing: 4px;
-//    padding-left: 2px;
-//  }
-//  &:before{
-//    color: $color-orange;
-//  }
-//  &:after{
-//    color: $color-darkGray;
-//  }
-//}
+.star-modified{
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ background: $color-lightGray;
+ width: 126px;
+ height: 30px;
+ border-radius: 15px;
+ font-size: 16px;
+ &:before, &:after{
+   display: flex;
+   justify-content: space-around;
+   align-items: center;
+   letter-spacing: 4px;
+   padding-left: 2px;
+ }
+ &:before{
+   color: $color-orange;
+ }
+ &:after{
+   color: $color-darkGray;
+ }
+}
+.star-big{
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ background: $color-lightGray;
+ width: 182px;
+ height: 46px;
+ border-radius: 25px;
+ font-size: 24px;
+ &:before, &:after{
+   display: flex;
+   justify-content: space-around;
+   align-items: center;
+   letter-spacing: 4px;
+   padding-left: 2px;
+ }
+ &:before{
+   color: $color-orange;
+ }
+ &:after{
+   color: $color-darkGray;
+ }
+}
 .bullet{
   margin-bottom: 20px;
   display: flex;
@@ -559,32 +588,29 @@ h2{
   font-weight: bolder;
   font-size: 20px;
 }
-// start-mini-0, start-mini-1, start-mini-2,
-// start-mini-3, start-mini-4, start-mini-5
-//@for $before from 0 to 6 {
-//  $after: 5 - $before;
-//  .star-#{$before},
-//  .star-big-#{$before},
-//  .star-mini-#{$before}{
-//    &::after{
-//      @include repeat($after);
-//    }
-//    &::before{
-//      @include repeat($before);
-//    }
-//  }
-//
-//  .star-#{$before} { @extend .star; }
-//  .star-big-#{$before} { @extend .star-big; }
-//  .star-mini-#{$before} { @extend .star-mini; }
-//}
-//.star-5{
-//  @extend .star;
-//  &::before{
-//    content: '★★★★★';
-//
-//  }
-//}
+// str-0, str-1, str-2,
+// str-3, str-4, str-5
+@for $before from 0 to 6 {
+  $after: 5 - $before;
+  .star-modified-#{$before},
+  .star-big-#{$before},
+  .star-mini-#{$before}{
+    &::after{
+      @include repeat($after);
+    }
+    &::before{
+      @include repeat($before);
+    }
+ }
+
+ .star-modified-#{$before} { @extend .star-modified; }
+ .star-big-#{$before} { @extend .star-big; }
+ .star-mini-#{$before} { @extend .star-mini; }
+}
+.star-5 {
+  @extend .star;
+  &::before{ @include repeat(5) }
+}
 .intro{
   &__content{
     padding: 10px 0 0 25px;
