--- a/src/template/comments.html
+++ b/src/template/comments.html
@@ -1,7 +1,7 @@
 <div class="comments">
     //= comments-preview.html
-    <div class="flex container">
-        <div class="half-and-quarter comments__content">
+    <div class="flex container comments__content">
+        <div class="half-and-quarter">
             <div class="text-sub-title text-blue text-header text-strong">
                 12 отзывов
             </div>
@@ -16,7 +16,7 @@
                             28 декабря 2018
                         </div>
                     </div>
-                    <div class="star-3"></div>
+                    <div class="star-modified-3"></div>
                 </header>
                 <main class="comment__content">
                     <hr>
@@ -53,7 +53,7 @@
                             28 декабря 2018
                         </div>
                     </div>
-                    <div class="star-1"></div>
+                    <div class="star-modified-1"></div>
                 </header>
                 <main class="comment__content">
                     <hr>
@@ -67,26 +67,26 @@
             <article class="flex flex-j-sb flex-a-fs flex-d-c form form_offset_big">
                 <h1>Расскажите о своем опыте</h1>
                 <form class="flex flex-d-c flex-a-fs border-box">
-                    <input class="input input_type_text input_type_login" type="text" name="name" placeholder="Введите имя">
-                    <br>
+                    <input class="input input_type_text input_type_login input_offset_big" type="text" name="name" placeholder="Ваше имя">
                     <strong class="set-appraisa">
-                        <span class="text-small">★</span> &nbsp; &nbsp; Поставьте оценку организации:
-                        &nbsp; &nbsp; <div class="offset-left offset-right star-big-4"></div>
+                        <span class="text-small">★</span>
+                        &nbsp; &nbsp; Поставьте оценку организации: &nbsp; &nbsp;
+                        <div class="offset-left offset-right star-big-4"></div>
                         4 из 5
                     </strong>
                     <br>
                     <input class="input input_type_text input_type_email" type="email" name="email" placeholder="Ваш e-mail">
                     <textarea
                         name="comment"
-                        class="input input_type_text input_type_comment"
+                        class="input input_type_text input_type_textarea input_type_comment"
                         id=""
                         cols="30"
-                        rows="10"
+                        rows="8"
                         placeholder="Ваш комментарий"
                     ></textarea>
-                    <input type="text" class="input input_type_text input_type_advantage" placeholder="Расскажите о преимуществах">
-                    <input type="text" class="input input_type_text input_type_problems" placeholder="Расскажите о недостатках">
-                    <div class="input input_type_file input_styled">
+                    <input type="text" class="input input_type_text input_type_advantages input_offset_big" placeholder="Расскажите о преимуществах">
+                    <input type="text" class="input input_type_text input_type_problems input_offset_big" placeholder="Расскажите о недостатках">
+                    <div class="input input_type_file input_styled input_offset_big">
                         <input type="file" class="input__upload input__upload_type_file">
                         <div class="input__styled-item input__styled-item_type_file">
                             Приложите файл
@@ -109,8 +109,6 @@
                 </form>
             </article>
         </div>
-        <div class="one-and-sixth flex flex-d-c">
-
-        </div>
+        <div class="one-and-sixth flex flex-d-c"></div>
     </div>
 </div>
