--- a/src/blocks/comments/comments.scss
+++ b/src/blocks/comments/comments.scss
@@ -1,5 +1,6 @@
 $color-blue: #93a5cf;
 $color-darkGray: #a4a4a4;
+$color-gray: #c3c3c3;
 $color-lightGray: #efefef;
 $color-lightestGray: #f7f7f7;
 $color-orange: #ff5839;
@@ -11,11 +12,17 @@ $color-orange: #ff5839;
   align-items: center;
   font-size: 14px;
   padding: 0 10px;
-  margin-left: 16px;
+  margin: 5px 16px 5px;
 }
 
 .comments-preview{
   padding-bottom: 15px;
+}
+
+.comments{
+  &__content{
+    margin-bottom: 74px;
+  }
 }
 
 .comments-intro{
