--- a/src/blocks/card/card.scss
+++ b/src/blocks/card/card.scss
@@ -1,3 +1,24 @@
+$color-blue: #93a5cf;
+$color-darkGray: #a4a4a4;
+$color-lightGray: #efefef;
+$color-lightestGray: #f7f7f7;
+$color-gray: #eee;
+$color-white: #ffffff;
+$color-orange: #ff5839;
+$color-yellow: #f6d166;
+$starChar: '★';
+
+.animated{
+  transition: all .2s linear;
+}
+
+.cards-mini{
+  width: 93%;
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+}
+
 .card{
   &__image{
     height: 132px;
@@ -22,5 +43,57 @@
   }
   &__location-2{
     margin-left: 10px;
+  }
+}
+
+.card-mini{
+  margin-top: 20px;
+  @extend .animated;
+  border: 1px solid $color-gray;
+  border-radius: 10px;
+  padding: 20px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  position: relative;
+  &__image{
+    min-height: 100px;
+    width: 100%;
+    box-sizing: border-box;
+    border-radius: 10px;
+    padding: 20px;
+    object-fit: scale-down;
+    background: $color-lightestGray;
+  }
+  &__location-1{
+    margin-top: 10px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    width: 100%;
+    justify-content: space-between;
+  }
+  &__stars{
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    top: 10px;
+    left: -13px;
+    &_special{
+      top: -15px;
+    }
+  }
+  &__special-label{
+    background-color: $color-orange;
+    padding: 7px 16px;
+    font-weight: 500;
+    color: $color-white;
+    font-size: 14px;
+    border-radius: 20px;
+    border-bottom-left-radius: 0;
+  }
+  &:hover{
+    box-shadow: 0 0 29px rgba(111,111,111,0.2);
   }
 }
