--- a/src/template/comments.html
+++ b/src/template/comments.html
@@ -1,6 +1,6 @@
 <div class="comments">
     //= comments-preview.html
-    <div class="flex container comments__content">
+    <div class="flex flex-a-fs container comments__content">
         <div class="half-and-quarter">
             <div class="text-sub-title text-blue text-header text-strong">
                 12 отзывов
@@ -109,6 +109,76 @@
                 </form>
             </article>
         </div>
-        <div class="one-and-sixth flex flex-d-c"></div>
+        <div class="flex flex-g-1 comments__cards">
+            <div class="cards-mini">
+                <div class="text-sub-title text-header text-header_offset-bottom_zero text-strong">
+                    Еще варианты
+                </div>
+                <div class="card-mini">
+                    <div class="card-mini__stars card-mini__stars_special">
+                        <div class="card-mini__special-label">Спецпредложение</div>
+                        <div class="star-modified-5 star-modified-5_special"></div>
+                    </div>
+                    <img src="img/Green-Money-mini.png" alt="Green Money" class="card-mini__image">
+                    <div class="flex flex-d-c">
+                        <div class="card-mini__location-1">
+                            <div class="long__text-2">Срок займа</div>
+                            <div class="long__text-3 strong">36 месяцев</div>
+                        </div>
+                        <div class="card-mini__location-1">
+                            <div class="long__text-2">Сумма займа</div>
+                            <div class="long__text-3 strong">до 1 500 000 руб.</div>
+                        </div>
+                        <div class="card-mini__location-1">
+                            <div class="long__text-2">Процентная ставка</div>
+                            <div class="long__text-3 strong">от 13,5%</div>
+                        </div>
+                        <button class="button button_size_full">Оформить займ</button>
+                    </div>
+                </div>
+                <div class="card-mini">
+                    <div class="card-mini__stars card-mini__stars">
+                        <div class="star-modified-3"></div>
+                    </div>
+                    <img src="img/bistro-dengi-mini.png" alt="Быстро деньги" class="card-mini__image">
+                    <div class="flex flex-d-c">
+                        <div class="card-mini__location-1">
+                            <div class="long__text-2">Срок займа</div>
+                            <div class="long__text-3 strong">36 месяцев</div>
+                        </div>
+                        <div class="card-mini__location-1">
+                            <div class="long__text-2">Сумма займа</div>
+                            <div class="long__text-3 strong">до 1 500 000 руб.</div>
+                        </div>
+                        <div class="card-mini__location-1">
+                            <div class="long__text-2">Процентная ставка</div>
+                            <div class="long__text-3 strong">от 13,5%</div>
+                        </div>
+                        <button class="button button_size_full">Оформить займ</button>
+                    </div>
+                </div>
+                <div class="card-mini">
+                    <div class="card-mini__stars card-mini__stars">
+                        <div class="star-modified-4"></div>
+                    </div>
+                    <img src="img/lime-zaim-mini.png" alt="Lime займы" class="card-mini__image">
+                    <div class="flex flex-d-c">
+                        <div class="card-mini__location-1">
+                            <div class="long__text-2">Срок займа</div>
+                            <div class="long__text-3 strong">36 месяцев</div>
+                        </div>
+                        <div class="card-mini__location-1">
+                            <div class="long__text-2">Сумма займа</div>
+                            <div class="long__text-3 strong">до 1 500 000 руб.</div>
+                        </div>
+                        <div class="card-mini__location-1">
+                            <div class="long__text-2">Процентная ставка</div>
+                            <div class="long__text-3 strong">от 13,5%</div>
+                        </div>
+                        <button class="button button_size_full">Оформить займ</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
