--- a/src/template/comments-preview.html
+++ b/src/template/comments-preview.html
@@ -6,7 +6,7 @@
             <a href="https://greenmoney.ru" class="breadcrumbs__item">Greenmoney</a>
             <div class="breadcrumbs__item">Отзывы</div>
         </div>
-        <div class="flex flex-j-s flex-a-fs">
+        <div class="flex flex-j-s flex-a-fs comments-preview__intro">
             <div class="intro__title comments-intro__title strong">
                 Отзывы о Турбозайм (Turbozaim)
             </div>
@@ -21,7 +21,7 @@
                             при выборе той или иной микрофинансовой организации.
                         </div>
                         <div class="flex flex-j-sb">
-                            <button class="button button_size_medium button_offset_zero">Отсавьте свой отзыв</button>
+                            <button class="button button_size_medium button_offset_zero">Оставьте свой отзыв</button>
                             <div class="flex flex-d-c flex-j-c flex-a-fs">
                                 <div class="text-base-padding text-gray text-small">
                                     Рейтинг <span class="strong">3</span>
@@ -58,7 +58,7 @@
                                 creditplus.ru
                             </a>
                         </div>
-                        <button class="button button_offset_zero button_size_full">Оформить займ</button>
+                        <button class="button button_offset_zero button_offset-left_zero button_offset-right_zero button_size_full">Оформить займ</button>
                     </div>
                 </div>
             </div>
