--- a/src/blocks/comments/comments.scss
+++ b/src/blocks/comments/comments.scss
@@ -4,6 +4,7 @@ $color-gray: #c3c3c3;
 $color-lightGray: #efefef;
 $color-lightestGray: #f7f7f7;
 $color-orange: #ff5839;
+$color-border-gray: #dddddd;
 
 .set-appraisa{
   display: flex;
@@ -16,7 +17,11 @@ $color-orange: #ff5839;
 }
 
 .comments-preview{
-  padding-bottom: 15px;
+  padding-bottom: 5px;
+  &__intro{
+    padding-bottom: 10px;
+    margin-top: -5px;
+  }
 }
 
 .comments{
@@ -34,8 +39,7 @@ $color-orange: #ff5839;
 }
 
 .comments-intro{
-  padding-bottom: 10px;
-  border-right: 1px solid $color-darkGray;
+  border-right: 1px solid $color-border-gray;
   &__title{
     font-size: 30px;
     line-height: 1.6;
@@ -61,7 +65,7 @@ $color-orange: #ff5839;
     box-sizing: border-box;
     padding: 5px;
     padding-bottom: 5px;
-    margin-bottom: 5px;
+    margin-bottom: 18px;
   }
   &__meta{
     padding: 15px 10px;
@@ -78,15 +82,17 @@ $color-orange: #ff5839;
     font-weight: bold;
   }
   &__content{
-    padding: 10px 40px 0;
+    box-sizing: border-box;
+    padding: 0 10px;
     width: 100%;
   }
   &__text{
+    border-top: 1px solid $color-border-gray;
     font-size: 15px;
     font-weight: bold;
     line-height: 1.65;
     letter-spacing: 0.25px;
-    padding: 6px 10px;
+    padding: 20px 0 0;
   }
   &__pinned{
     margin: 28px 5px 0 0;
