--- a/src/template/problems-and-advantages.html
+++ b/src/template/problems-and-advantages.html
@@ -79,7 +79,111 @@
   </div>
   <!-- Empty column -->
   <div class="grid-c-1"></div>
+  <div class="grid-c-1 section">
+    <div class="grid-c-2">
+      <div class="text-sub-title text-blue text-header text-strong grid-c-2">
+        Заголовок второго уровня
+      </div>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci mollitia quod minus deleniti officia rem nihil omnis
+      accusantium, a magni assumenda eum. Quas nemo numquam aliquam perspiciatis? Quisquam, deleniti dolorum!
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis provident voluptas, eius dolore sapiente a ducimus
+      ut minima quaerat odit nihil! Culpa tempora libero facilis quibusdam beatae labore et quasi.
+      <h1>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+      </h1>
+      <div class="form form_type_blue grid-c-2">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis provident voluptas, eius dolore sapiente a
+        ducimus ut
+        minima quaerat odit nihil! Culpa tempora libero facilis quibusdam beatae labore et quasi.
+      </div>
+    </div>
+    <div class="grid-c-2">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, ratione. Aperiam, sunt soluta iure quas repellendus aut illo libero assumenda nostrum maiores, ab inventore officia omnis voluptatibus ex accusantium error!
+    </div>
+  </div>
   <div class="grid-c-1">
-
+    <div class="card-mini">
+      <div class="card-mini__stars card-mini__stars">
+        <div class="star-modified-4"></div>
+      </div>
+      <img src="img/lime-zaim-mini.png" alt="Lime займы" class="card-mini__image">
+      <div class="flex flex-d-c">
+        <div class="card-mini__location-1">
+          <div class="long__text-2">Срок займа</div>
+          <div class="long__text-3 strong">36 месяцев</div>
+        </div>
+        <div class="card-mini__location-1">
+          <div class="long__text-2">Сумма займа</div>
+          <div class="long__text-3 strong">до 1 500 000 руб.</div>
+        </div>
+        <div class="card-mini__location-1">
+          <div class="long__text-2">Процентная ставка</div>
+          <div class="long__text-3 strong">от 13,5%</div>
+        </div>
+        <button class="button button_size_full">Оформить займ</button>
+      </div>
+    </div>
+  </div>
+  <div class="grid-c-1">
+    <div class="text-sub-title text-blue text-header text-strong">
+      12 отзывов
+    </div>
+    <article class="comment flex flex-j-sb flex-d-c form">
+      <header class="comment__header flex full-width flex-j-sb flex-n-w">
+        <img src="img/avatar.png" alt="avatar" class="comment__avatar">
+        <div class="comment__meta flex flex-d-c flex-a-fs flex-g-2">
+          <div class="comment__author">
+            Наталья Грицина
+          </div>
+          <div class="comment__date-create">
+            28 декабря 2018
+          </div>
+        </div>
+        <div class="star-modified-3"></div>
+      </header>
+      <main class="comment__content">
+        <div class="comment__text">
+          <div>
+            Понадобился займ в размере 5000 рублей на 10 дней до аванса,
+            чтобы заплатить за аренду квартиры. Нашла, что есть
+            варианты без процентов. Выбрала еКапусту и оформила заявку.
+            Вместо 5000 рублей одобрили даже больше (8000 рублей). Но
+            при выборе способа получения денег произошел казус. Оказывается,
+            чтобы получить деньги на карту, нужно
+            сфотографироваться с табличкой в руках с надписью "Заявка на займ еКапуста",
+            а также сделать селфи с паспортом и фото
+            самого паспорта. Проблема заключалась в том, что у меня не было под рукой
+            телефона с камерой и пришлось просить
+            незнакомых соседей. Это было не слишком удобно, но в итоге займ я на карту
+            получила. Сумма
+            к погашению в личном кабинете - 5000 рублей, т.е. первый займ в
+            еКапусте действительно получается без процентов.
+          </div>
+          <img class="comment__pinned comment__pinned_type_image" src="img/russian-standart.png" alt="credit card">
+          <img class="comment__pinned comment__pinned_type_image" src="img/russian-standart.png" alt="credit card">
+        </div>
+      </main>
+    </article>
+    <article class="comment flex flex-j-sb flex-d-c form">
+      <header class="comment__header flex full-width flex-j-sb flex-n-w">
+        <img src="img/avatar.png" alt="avatar" class="comment__avatar">
+        <div class="comment__meta flex flex-d-c flex-a-fs flex-g-2">
+          <div class="comment__author">
+            Константин Константинопольский
+          </div>
+          <div class="comment__date-create">
+            28 декабря 2018
+          </div>
+        </div>
+        <div class="star-modified-1"></div>
+      </header>
+      <main class="comment__content">
+        <div class="comment__text">
+          Ужасная карта — не берите. Если просрочите хоть рубль по рассрочке,
+          проценты начисляться на ВСЮ сумму всех рассрочек.
+        </div>
+      </main>
+    </article>
+    <button class="button button_type_gray button_size_full button_offset-bottom_much">Показать больше отзывов</button>
   </div>
 </div>
